# UA-2023-Spring-Computer-Graphics

./: .gitignore  Bodies3D.cpp  Bodies3D.h  BufferStorage.cpp  BufferStorage.h  CMakeLists.txt  Clipping.h  Color.cpp  Color.h  CubeMap.cpp  CubeMap.h  CubeMapFace.h  CubeMapVertex.cpp  CubeMapVertex.h  Face.cpp  Face.h  Figure.cpp  Figure.h  L_system.cpp  L_system.h  L_system3D.h  Light.cpp  Light.h  LightTools.cpp  LightTools.h  Line2D.h  Point2D.cpp  Point2D.h  README.md  ShadowMask.cpp  TextureCoord.cpp  TextureCoord.h  TextureMap.cpp  TextureMap.h  Z_buffer.cpp  Z_buffer.h  easy_image.cc  easy_image.h  engine.cc  l_parser.cc  (+3 more)
examen/: 2010_1.L2D  2010_1.ini  2011_1.L2D  2011_1.ini  2016_2.L2D  2016_2.ini  2017_1.L2D  2017_1.ini  2017_2.L2D  2017_2.ini  2017_3.L2D  2017_3.ini  2021_H2.ini  a1.L2D  a1.ini  a2.L2D  a2.ini  a3.L2D  a3.ini  a4.L2D  a4.ini  a5.L2D  a5.ini  a6.L2D  a6.ini  a7.L2D  a7.ini  a8.L2D  a8.ini
libraries/: easy_image.cc  easy_image.h  ini_configuration.cc  ini_configuration.h  l_parser.h
output_ini/: own_1.L2D  own_1.ini  own_2.L2D  own_2.ini  own_mobius.ini  own_torus_umb.ini
src/2DProjection/: BufferStorage.cpp  BufferStorage.h  ZBuffer.cpp  ZBuffer.h  tools2D.cpp  tools2D.h
src/Clipping/: Clipping.cpp  Clipping.h
src/ConfigReaders/: ConfigReader.cpp  ConfigReader.h  FigureReader.cpp  FigureReader.h  LightReader.cpp  LightReader.h
src/Configuration/: ConfigurationChecks.cpp  ConfigurationChecks.h  SectionReader.cpp  SectionReader.h  obj_parser.cc
src/CubeMapping/: CubeMap.h  CubeMapFace.cpp  CubeMapFace.h  CubeMapVertex.h
src/Figure/: Color.cpp  Color.h  Face.h  Figure.cpp  Figure.h  Line2D.cpp  Line2D.h
src/InputType/: FigureType.cpp  FigureType.h
src/LSystems/: LSystem.cpp  LSystem.h  LSystem3D.cpp  LSystem3D.h  L_system.h  L_system3D.cpp  L_system3D.h
src/LSystems/Adapter/: L2DAdapt.cpp  L2DAdapt.h  L3DAdapt.cpp  L3DAdapt.h  LSystemAdapt.cpp  LSystemAdapt.h
src/LSystems/Strategy/: LStrat2D.cpp  LStrat2D.h  LStrat3D.cpp  LStrat3D.h  LSystemStrat.cpp  LSystemStrat.h
src/Lighting/: Light.cpp  Light.h  LightInfinite.cpp  LightInfinite.h  LightPosition.cpp  LightPosition.h  LightTools.cpp  LightTools.h  ShadowMask.h
src/ObjectCreation/: Bodies3D.cpp  Bodies3D.h  FigureFactory.cpp  FigureFactory.h  LightCreator.cpp  LightCreator.h
src/ObjectType/: FigureFactory.cpp  FigureFactory.h  FigureType.cpp  FigureType.h
src/Perspective/: EyePerspective.cpp  EyePerspective.h
src/Textures/: TextureCoord.h  TextureMap.cpp  TextureMap.h
testing/: EngineTests.cpp  SnapshotMaker.cpp  test-main.cpp
